--- a/SOA/ibge-nomes/src/main/java/com/example/ibgenomes/static/index.html
+++ b/SOA/ibge-nomes/src/main/java/com/example/ibgenomes/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Tendência de Nomes</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
